--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "dayjs": "^1.11.13",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.8",
     "zustand": "^5.0.5"
