feature select refLine

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-VITE_THINGSBOARD_HOST=http://localhost:8080
+VITE_THINGSBOARD_HOST=http://172.16.10.112:8080
 VITE_USERNAME=tenant@thingsboard.org
 VITE_PASSWORD=tenant
-VITE_DEVICE_ID=4677f7c0-41ec-11f0-9c8e-27de2a08ce55
+VITE_DEVICE_ID=9a8475b0-45d8-11f0-8e3f-1f134eecd991
 VITE_BASE_URL=http://localhost:3000
