--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
 VITE_THINGSBOARD_HOST=http://172.16.10.112:8080
+VITE_THINGSBOARD_HOST_WEBS0CKET=ws://172.16.10.112:8080
 VITE_USERNAME=tenant@thingsboard.org
 VITE_PASSWORD=tenant
 VITE_DEVICE_ID=9a8475b0-45d8-11f0-8e3f-1f134eecd991
