--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
