--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@tailwindcss/vite": "^4.1.8",
     "antd": "^5.25.3",
+    "antd-style": "^3.7.1",
     "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
