--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,10 +2,26 @@ server {
     listen 80;
     server_name localhost;
 
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html;  # ที่เก็บไฟล์ static (จาก Dockerfile)
     index index.html;
 
+    # SPA routing
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
+
+    # ถ้า FE ต้องเรียก API ของ backend
+    location /api/ {
+        proxy_pass http://172.16.10.112:8080/;  
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # เพิ่ม security headers (option)
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header X-XSS-Protection "1; mode=block";
 }
