--- a/.github/workflows/deploy-fe.yml
+++ b/.github/workflows/deploy-fe.yml
@@ -84,9 +84,10 @@ jobs:
             VITE_BASE_URL=${{ secrets.VITE_BASE_URL }}
             EOF
 
-            docker compose pull
-            docker compose up -d --remove-orphans
+            docker compose -f compose.yaml pull
+            docker compose up -f compose.yaml up -d --remove-orphans
 
             docker image prune -af --filter "until=24h"
 
             echo "🚀 Frontend deployed successfully!"
+            docker compose -f compose.yaml ps
